--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="container-fluid text-center">
+      <button id="miBoton"></button>
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
@@ -25,5 +26,6 @@
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
     </div>
+    <script id="app.js"></script>
   </body>
 </html>
